--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
-  trace_scrapper:
+  trace_scraper:
     build:
       context: .
       dockerfile: Dockerfile
     env_file:
       - .env
-    container_name: trace_scrapper
+    container_name: trace_scraper
     ports:
       - "5000:5000"
     volumes:
